1 часть ФЗ - правки